--- a/DiageoMDMWeb/src/main/webapp/admin/potential/searchPotential.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/potential/searchPotential.xhtml
@@ -67,7 +67,8 @@
                                     </h:panelGroup>           
                                     <h:outputLabel value="#{msg.athena_code}"/>
                                     <h:panelGroup>
-                                        <p:inputText id="itAthenaCode" value="#{potentialSearchBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 93%"/>
+                                        <p:inputText id="itAthenaCode" value="#{potentialSearchBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 93%"
+                                                     readonly="true"/>
                                         <p:message for="itAthenaCode"/>
                                     </h:panelGroup>           
                                 </h:panelGrid>
