--- a/DiageoMDMWeb/src/main/webapp/admin/canal/consultarCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/canal/consultarCanal.xhtml
@@ -48,7 +48,8 @@
                                     </h:panelGroup>
                                     <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
                                     <h:panelGroup>
-                                        <p:inputText id="itAthenaCode" value="#{consultarChannelBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
+                                        <p:inputText id="itAthenaCode" value="#{consultarChannelBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"
+                                                     readonly="true"/>
                                         <p:message for="itAthenaCode"/>
                                     </h:panelGroup>
                                     <h:outputLabel value="#{msg.estado}"/>
