--- a/DiageoMDMWeb/src/main/webapp/admin/distributorLocation/searchDistributorLocation.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/distributorLocation/searchDistributorLocation.xhtml
@@ -45,7 +45,8 @@
                                         </h:panelGroup>
                                         <h:outputLabel value="#{msg.athena_code}"/>                                    
                                         <h:panelGroup>
-                                            <p:inputText id="itAthenaCode" label="#{msg.athena_code}" required="true" value="#{regionalSearchBean.athenaCode}" style="width: 85%"/>
+                                            <p:inputText id="itAthenaCode" label="#{msg.athena_code}" required="true" value="#{regionalSearchBean.athenaCode}" style="width: 85%"
+                                                         readonly="true"/>
                                             <p:message for="itAthenaCode"/>
                                         </h:panelGroup>
                                     </h:panelGrid>
