--- a/DiageoMDMWeb/src/main/webapp/login.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/login.xhtml
@@ -11,6 +11,7 @@ and open the template in the editor.
     <h:head>
         <title>#{msg.tittle_app}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta http-equiv="refresh" content="600"/>
         <h:outputStylesheet library="css" name="login.css"/>
     </h:head>
     <h:body>
